--- a/src/index_v0.html
+++ b/src/index_v0.html
@@ -17,23 +17,23 @@
     <header class="content-hd">
       <section class="title">
         <div class="name">
-          <h1>于子俊<small>Jackie Yu</small></h1>
+          <h1>于子俊<small>Zijun Yu</small></h1>
         </div>
         <div class="job">
-          <h2>Web前端开发工程师<small> / 成都</small></h2>
+          <h2>Web前端开发工程师<small></small></h2>
         </div>
       </section>
       <section class="info">
         <h2>男 / 2000.02</h2>
-        <h3>本科 / 2022年毕业 · 3年工作经验</h3>
-        <h3>哈尔滨理工大学 · 计算机科学与技术</h3>
+        <h3>本科 / 2022年毕业</h3>
+        <h3>哈尔滨理工大学 · 软件工程</h3>
       </section>
       <section class="contact">
         <ul>
-          <li><a href="https://yzjacc.cn" target="_blank"><span class="contact-link">https://www.yzjacc.cn</span><i
+          <li><a href="https://www.yzjacc.cn" target="_blank"><span class="contact-link">https://www.yzjacc.cn</span><i
                 class="iconfont icon-homepage"></i></a></li>
-          <li><a href="https://github.com/yzjacc" target="_blank"><span class="contact-link">github.com/yzjacc</span><i
-                class="iconfont icon-github"></i></a></li>
+          <li><a href="https://github.com/yzjacc" target="_blank"><span
+                class="contact-link">https://github.com/yzjacc</span><i class="iconfont icon-github"></i></a></li>
           <li><a href="mailto:yzjacc@gmail.com" target="_blank"><span class="contact-link">yzjacc@gmail.com</span><i
                 class="iconfont icon-email"></i></a></li>
           <li><a href="tel:18845641518" target="_blank"><span class="contact-link">+86 188 4564 1518</span><i
@@ -42,28 +42,27 @@
       </section>
     </header>
     <div class="content-bd">
-      <!-- <div class="content-left"> -->
+      <div class="content-left">
         <section id="project">
           <header class="section-hd"><span class="section-title-l"></span>
-            <h2 class="section-title">主要项目</h2><span class="section-title-r"></span>
+            <h2 class="section-title">工作经验</h2><span class="section-title-r"></span>
           </header>
           <div class="section-bd">
             <div class="item item-main">
-              <header class="item-hd">
-                <span class="item-time">2020.06 ~ 至今</span>
-                <a class="btn item-more" href="https://www.bytedance.com/" target="_blank" title="工作经历">工作</a>
+              <header class="item-hd"><span class="item-time">2020.06 ~ 至今</span> <a class="btn item-more"
+                  href="https://www.bytedance.com/" target="_blank" title="工作经历">工作</a>
                 <h3 class="item-name">北京字节跳动科技有限公司</h3>
               </header>
             </div>
             <div class="item item-stage">
               <header class="item-hd">
-                <h3 class="item-name"> 产品研发和工程架构部 · 抖音</h3>
+                <h3 class="item-name"> 抖音 · 商业化技术</h3>
                 <span class="item-time">2021.10 ~ 至今</span>
               </header>
             </div>
             <div class="item">
               <header class="item-hd">
-                <h3 class="item-name"><i class="iconfont icon-dot"></i>达人 C 端性能体验优化专项</h3>
+                <h3 class="item-name"><i class="iconfont icon-dot"></i>抖音 · 达人中心</h3>
               </header>
               <div class="item-bd">
                 <p class="section-content"><strong>核心维护人员</strong>
@@ -72,65 +71,107 @@
                 </p>
               </div>
             </div>
+            <div class="item item-stage">
+              <header class="item-hd">
+                <h3 class="item-name">产品研发和工程架构部 · 教育</h3>
+                <span class="item-time">2020.06 ~ 2021.07</span>
+              </header>
+            </div>
             <div class="item">
               <header class="item-hd">
-                <h3 class="item-name"><i class="iconfont icon-dot"></i> 达人前端稳定性建设优化</h3>
+                <h3 class="item-name"><i class="iconfont icon-dot"></i> 瓜瓜龙外教 · App</h3>
               </header>
               <div class="item-bd">
-                <p class="section-content"><strong>核心维护人员</strong>
-                  负责抖音整个<em>达人中心</em>的维护及研发，<em>POI</em>千万级项目，并维护团队<em>代码质量</em>，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
-                  进行页面<em>性能优化</em>。包括但不限于<em>JSB</em>交互、<em>跨端</em>领域的探索。
+                <p class="section-content"><strong>研发负责人</strong>
+                  负责整个App的维护及研发，将页面场景规范配置化，进行多端兼容。以及<em>多功能平台</em>接入，基于<em>Dart</em><em>Flutter</em>开发。
+                  在原生写法基础上，开发轻量型<em>可视化组件</em>，优化<em>开发效率</em>。
                 </p>
               </div>
             </div>
             <div class="item">
               <header class="item-hd">
-                <h3 class="item-name"><i class="iconfont icon-dot"></i>0-1 抖音移动端</h3>
+                <h3 class="item-name"><i class="iconfont icon-dot"></i> 瓜瓜龙外教 · Web</h3>
               </header>
               <div class="item-bd">
-                <p class="section-content"><strong>核心维护人员</strong>
-                  负责抖音整个<em>达人中心</em>的维护及研发，<em>POI</em>千万级项目，并维护团队<em>代码质量</em>，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
-                  进行页面<em>性能优化</em>。包括但不限于<em>JSB</em>交互、<em>跨端</em>领域的探索。
+                <p class="section-content"><strong>研发负责人</strong>
+                  负责整个外教官网的产品迭代与技术研发，将页面场景规范配置化。基于<em>Vue.js</em><em>React</em>混合开发，实现<em>Spa</em>页面组件化开发能力；攻克线上<em>内存溢出</em><em>网络安全</em>等问题；根据<em>FMP</em>指标进行性能迭代优化。
                 </p>
+              </div>
+            </div>
+            <div class="item">
+              <header class="item-hd">
+                <h3 class="item-name"><i class="iconfont icon-dot"></i> 中后台搭建 · CRM</h3>
+              </header>
+              <div class="item-bd">
+                <p class="section-content"><strong>核心开发人员</strong>
+                  负责外教侧运营后台研发。基于<em>Vue.js</em>开发。
+                  主要负责<em>整体新老CRM重构</em>，UI组件库赋能。</p>
               </div>
             </div>
 
 
           </div>
+          <!-- <div class="section-bd">
+                        <div class="item item-main">
+                            <header class="item-hd"><span class="item-time">2020.03 ~ 2021.05</span> <a
+                                    class="btn item-more" href="http://tencent.com" target="_blank" title="工作经历">工作</a>
+                                <h3 class="item-name">北京澎思科技有限公司</h3>
+                            </header>
+                        </div>
+                        <header class="item-hd">
+                            <h3 class="item-name"><i class="iconfont icon-dot"></i> 劳务实名制管理平台 · PC</h3><a
+                                class="item-more" href="https://github.com/yzjacc/Manage" target="_blank"
+                                title="开源代码"><i class="iconfont icon-link"></i></a>
+                        </header>
+                        <div class="item-bd">
+                            <p class="section-content"><strong>前端开发</strong><strong>核心开发人员</strong>
+                                基于<em>Vue.js</em>开发，搭配<em>Ant Design</em>作为主要UI组件库，用<em>Vuex</em>进行状态管理，利用<em>Vue
+                                    Router</em>进行路由配置。根据<em>人脸识别</em>OWLOOK平台考勤记录系统的出入记录主动上报给第三方平台。
+                            </p>
+                        </div>
+                    </div> -->
         </section>
-        <!-- <section id="personal">
+        <section id="personal">
           <header class="section-hd"><span class="section-title-l"></span>
             <h2 class="section-title">个人作品</h2><span class="section-title-r"></span>
           </header>
           <div class="section-bd">
             <div class="item">
+              <header class="item-hd">
+                <h3 class="item-name"><i class="iconfont icon-dot"></i>站点 - 技术博客</h3><a class="item-more"
+                  href="https://www.yzjacc.cn/" target="_blank" title="个人主页"><i class="iconfont icon-homepage"></i></a>
+              </header>
               <div class="item-bd">
-                <p class="section-content"><i class="iconfont icon-dot"></i>
-                  时刻保持<strong>好奇心</strong>，具有一定的<strong>创新创造</strong>精神，持续关注业内前沿技术。工作上<strong>积极执行</strong><strong>有责任心</strong>，具有良好的<strong>沟通合作</strong>能力、<strong>分析解决问题</strong>能力以及较强的<strong>学习能力</strong>。
+                <p class="section-content">使用<em>React UmiJs</em>作为前端主体框架,<em>Redux</em>进行状态管理，以<em>Ant
+                    Design</em>作为主要UI组件库，以<em>Dva</em>进行模块管理，<em>Koa</em>作为后台主体框架，搭建文章接口服务，<em>MySQL</em>提供数据存储服务，并实现<em>HTTPS</em>服务，提升服务可靠性、安全性，基于<em>Docker</em><em>Jenkins</em>实现CI/CD持续集成，并在实际场景中进行<em>网站性能优化</em>，<em>优化白屏时间</em>、<em>移动端适配</em>网站缓存与页面交互。主要进行技术总结和知识分享。
                 </p>
               </div>
             </div>
             <div class="item">
+              <header class="item-hd">
+                <h3 class="item-name"><i class="iconfont icon-dot"></i> 开源作品</h3><a class="item-more"
+                  href="https://github.com/yzjacc/React-Blog" target="_blank" title="Github"><i
+                    class="iconfont icon-github"></i></a>
+              </header>
               <div class="item-bd">
                 <p class="section-content">
-                  <i class="iconfont icon-dot"></i>
                   热爱开源精神，拥抱开源社区，学习新技术、分析源码。开源并维护一些完整项目、工具插件、<strong>pub包</strong>、<strong>npm包</strong>、代码片段等，撰写详尽用法文档，并将其托管至<strong>Github仓库</strong>。
                 </p>
               </div>
             </div>
           </div>
-        </section> -->
-      <!-- </div> -->
-      <!-- <div class="content-right"> -->
+        </section>
+      </div>
+      <div class="content-right">
         <section id="practice">
           <header class="section-hd"><span class="section-title-l"></span>
-            <h2 class="section-title">工作经历</h2><span class="section-title-r"></span>
+            <h2 class="section-title">实践经历</h2><span class="section-title-r"></span>
           </header>
           <div class="section-bd">
             <div class="item item-main">
               <header class="item-hd"><span class="item-time">2020.06 ~ 2021.07</span> <a class="btn item-more" href=""
-                  target="_blank" title="在校经历">在职</a>
-                <h3 class="item-name">字节跳动 · 抖音前端 · 机构</h3>
+                  target="_blank" title="在校经历">企业组织</a>
+                <h3 class="item-name">字节跳动 · Prek前端 · 外教侧负责人</h3>
               </header>
             </div>
             <div class="item-bd">
@@ -143,20 +184,18 @@
           </div>
           <div class="section-bd">
             <div class="item item-main">
-              <header class="item-hd"><span class="item-time">2020.06 ~ 2021.07</span> <a class="btn item-more" href=""
-                  target="_blank" title="在校经历">实习</a>
-                <h3 class="item-name">字节跳动 · 教育前端 · Prek</h3>
+              <header class="item-hd"><span class="item-time">2020.03 ~ 2021.10</span> <a class="btn item-more"
+                  href="https://github.com/yzjacc/Manage" target="_blank" title="在校经历">学生组织</a>
+                <h3 class="item-name">软件工程学院 · 前端开发组组长</h3>
               </header>
             </div>
             <div class="item-bd">
               <p class="section-content">
-                <strong>需求迭代</strong><strong>网站维护</strong><strong>技术规划</strong><strong>事故处理</strong><br><i
-                  class="iconfont icon-dot"></i> 除需求迭代外并且负责产品升级改造，功能接入，页面性能优化。<br /><i class="iconfont icon-dot"></i>
-                承担重点、难点的技术攻坚，提升团队研发效率及质量
+                <strong>前端开发</strong><strong>系统维护</strong><strong>学习交流</strong><br><i
+                  class="iconfont icon-dot"></i>主要负责项目前端组人员管理与项目前端开发整体规划，并且与后端人员沟通<strong>代理</strong>与<strong>跨域</strong>等接口设计。日常开发过程中，积极与前端组成员进行合作与交流，完善研究所前端技术累积与储备。
               </p>
             </div>
           </div>
-
         </section>
         <section id="skill">
           <header class="section-hd"><span class="section-title-l"></span>
@@ -164,7 +203,11 @@
           </header>
           <div class="section-bd">
             <ul class="section-list">
-
+              <li>
+                <p class="section-content"><i class="iconfont icon-dot"></i>
+                  <strong>大二</strong>入职字节跳动 工作至今近<strong>两年</strong>时间
+                </p>
+              </li>
               <li>
                 <p class="section-content"><i class="iconfont icon-dot"></i>
                   掌握Web前端开发基本技能，熟悉<strong>W3C标准</strong>、<strong>HTML</strong>、<strong>CSS</strong>、<strong>计算机网络</strong>、<strong>页面布局</strong>、<strong>响应式布局</strong>等，领悟<strong>视觉</strong>与<strong>设计</strong>，重视<strong>页面交互</strong>与<strong>用户体验</strong>。
@@ -186,7 +229,7 @@
               </li>
               <li>
                 <p class="section-content"><i class="iconfont icon-dot"></i>
-                  对<strong>Node.js(Koa)</strong>、<strong>Web前端安全</strong>、<strong>模块化规范</strong>、<strong>包管理器</strong>、<strong>CSS预处理器(Sass，Lass)</strong>、<strong>数据可视化</strong>等也有一定的应用与思考。
+                  对<strong>Node.js</strong>、<strong>Web前端安全</strong>、<strong>模块化规范</strong>、<strong>包管理器</strong>、<strong>CSS预处理器(Sass，Lass)</strong>、<strong>数据可视化</strong>等也有一定的应用与思考。
                 </p>
               </li>
               <!-- <li><p class="section-content"><i class="iconfont icon-dot"></i>
@@ -206,7 +249,7 @@
           </div>
         </section>
 
-      <!-- </div> -->
+      </div>
     </div>
   </div>
   <footer class="github-footer"><a class="footer-link" href="https://github.com/yzjacc" target="_blank"><i
