--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <script type="module" src="./main.ts"></script>
   <link rel="shortcut icon" type="image/x-icon" href="https://pg12138.oss-cn-beijing.aliyuncs.com/img/favicon.svg" />
 </head>
+<!-- 个人能力 文章分享和内推 AI -->
 
 <body>
   <!--[if IE]><p class="kill-ie">微软都放弃了IE，为啥你却还不放弃？</p><![endif]-->
@@ -42,7 +43,7 @@
       </section>
     </header>
     <div class="content-bd">
-      <!-- <div class="content-left"> -->
+      <div class="content-left">
         <section id="project">
           <header class="section-hd"><span class="section-title-l"></span>
             <h2 class="section-title">主要项目</h2><span class="section-title-r"></span>
@@ -63,7 +64,7 @@
             </div>
             <div class="item">
               <header class="item-hd">
-                <h3 class="item-name"><i class="iconfont icon-dot"></i>达人 C 端性能体验优化专项</h3>
+                <h3 class="item-name"><i class="iconfont icon-dot"></i>抖音集星 0 - 1 移动端建设</h3>
               </header>
               <div class="item-bd">
                 <p class="section-content"><strong>核心维护人员</strong>
@@ -74,7 +75,7 @@
             </div>
             <div class="item">
               <header class="item-hd">
-                <h3 class="item-name"><i class="iconfont icon-dot"></i> 达人前端稳定性建设优化</h3>
+                <h3 class="item-name"><i class="iconfont icon-dot"></i>抖音集星稳定性建设优化</h3>
               </header>
               <div class="item-bd">
                 <p class="section-content"><strong>核心维护人员</strong>
@@ -85,7 +86,7 @@
             </div>
             <div class="item">
               <header class="item-hd">
-                <h3 class="item-name"><i class="iconfont icon-dot"></i>0-1 抖音移动端</h3>
+                <h3 class="item-name"><i class="iconfont icon-dot"></i>SchemaTable</h3>
               </header>
               <div class="item-bd">
                 <p class="section-content"><strong>核心维护人员</strong>
@@ -94,11 +95,23 @@
                 </p>
               </div>
             </div>
+            <div class="item">
+              <header class="item-hd">
+                <h3 class="item-name"><i class="iconfont icon-dot"></i>基座体验优化</h3>
+              </header>
+              <div class="item-bd">
+                <p class="section-content"><strong>核心维护人员</strong>
+                  负责抖音整个<em>达人中心</em>的维护及研发，<em>POI</em>千万级项目，并维护团队<em>代码质量</em>，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
+                  进行页面<em>性能优化</em>。包括但不限于<em>JSB</em>交互、<em>跨端</em>领域的探索。
+                </p>
+              </div>
+            </div>
+
 
 
           </div>
         </section>
-        <!-- <section id="personal">
+        <section id="personal">
           <header class="section-hd"><span class="section-title-l"></span>
             <h2 class="section-title">个人作品</h2><span class="section-title-r"></span>
           </header>
@@ -114,21 +127,21 @@
               <div class="item-bd">
                 <p class="section-content">
                   <i class="iconfont icon-dot"></i>
-                  热爱开源精神，拥抱开源社区，学习新技术、分析源码。开源并维护一些完整项目、工具插件、<strong>pub包</strong>、<strong>npm包</strong>、代码片段等，撰写详尽用法文档，并将其托管至<strong>Github仓库</strong>。
+                  在团队内部积极内推优秀同学，积极参加团队技术分享，进行技术交流。为团队增添新鲜血液，在身边朋友和多个招聘平台收集简历<strong>300+</strong>，进行分享文章<strong>10+</strong>篇，文章获得过公司<strong>ByteTech</strong>精选推荐。
                 </p>
               </div>
             </div>
           </div>
-        </section> -->
-      <!-- </div> -->
-      <!-- <div class="content-right"> -->
+        </section>
+      </div>
+      <div class="content-right">
         <section id="practice">
           <header class="section-hd"><span class="section-title-l"></span>
             <h2 class="section-title">工作经历</h2><span class="section-title-r"></span>
           </header>
           <div class="section-bd">
             <div class="item item-main">
-              <header class="item-hd"><span class="item-time">2020.06 ~ 2021.07</span> <a class="btn item-more" href=""
+              <header class="item-hd"><span class="item-time">2021.10 ~ 至今</span> <a class="btn item-more" href=""
                   target="_blank" title="在校经历">在职</a>
                 <h3 class="item-name">字节跳动 · 抖音前端 · 机构</h3>
               </header>
@@ -206,7 +219,8 @@
           </div>
         </section>
 
-      <!-- </div> -->
+        <!-- </div> -->
+      </div>
     </div>
   </div>
   <footer class="github-footer"><a class="footer-link" href="https://github.com/yzjacc" target="_blank"><i
