--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <!--[if IE
       ]><p class="kill-ie">微软都放弃了IE，为啥你却还不放弃？</p><!
     [endif]-->
-    <p class="last-modified">最后更新时间：2025年9月</p>
+    <p class="last-modified">最后更新时间：2025年12月</p>
     <div class="content">
       <header class="content-hd">
         <section class="title">
@@ -35,7 +35,7 @@
         <section class="info">
           <h2>男 / 2000.02</h2>
           <h3>本科 / 2022年毕业 / 3年工作经验</h3>
-          <h3>哈尔滨理工大学 · 计算机科学与技术</h3>
+          <h3>哈尔滨理工大学 · 软件工程</h3>
         </section>
         <section class="contact">
           <ul>
@@ -91,23 +91,10 @@
               <div class="item item-stage">
                 <header class="item-hd">
                   <h3 class="item-name">产品研发和工程架构部 · 抖音</h3>
-                  <span class="item-time">2021.10 ~ 至今</span>
+                  <span class="item-time">2022.06 ~ 至今</span>
                 </header>
               </div>
-              <div class="item">
-                <header class="item-hd">
-                  <h3 class="item-name">
-                    <i class="iconfont icon-dot"></i>抖音集星 0 - 1 移动端建设
-                  </h3>
-                </header>
-                <div class="item-bd">
-                  <p class="section-content">
-                    <strong>核心维护人员</strong>
-                    负责抖音整个<em>达人中心</em>的维护及研发，<em>POI</em>千万级项目，并维护团队<em>代码质量</em>，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
-                    进行页面<em>性能优化</em>。包括但不限于<em>JSB</em>交互、<em>跨端</em>领域的探索。
-                  </p>
-                </div>
-              </div>
+
               <div class="item">
                 <header class="item-hd">
                   <h3 class="item-name">
@@ -125,28 +112,39 @@
               <div class="item">
                 <header class="item-hd">
                   <h3 class="item-name">
-                    <i class="iconfont icon-dot"></i>SchemaTable
+                    <i class="iconfont icon-dot"></i>SchemaTable Agent
                   </h3>
                 </header>
                 <div class="item-bd">
                   <p class="section-content">
                     <strong>核心维护人员</strong>
                     负责抖音整个<em>达人中心</em>的维护及研发，<em>POI</em>千万级项目，并维护团队<em>代码质量</em>，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
-                    进行页面<em>性能优化</em>。包括但不限于<em>JSB</em>交互、<em>跨端</em>领域的探索。
+                    进行页面<em>性能优化</em>。利用<em>LLM</em>模型、<em>MCP</em>实现了<em>D2C</em>UI稿对代码的转换，代码采纳率<em>
+                      76%+ </em
+                    >， 研发提效<em> 三倍 </em>。 进行 Schema Table
+                    全量统一，提升开发效率。截止目前接入5个业务平台全量推广。在不同的接近<em
+                      >60 +</em
+                    >
+                    个业务场景使用。
                   </p>
                 </div>
               </div>
               <div class="item">
                 <header class="item-hd">
                   <h3 class="item-name">
-                    <i class="iconfont icon-dot"></i>基座体验优化
+                    <i class="iconfont icon-dot"></i>抖音集星 性能优化专项
                   </h3>
                 </header>
                 <div class="item-bd">
                   <p class="section-content">
                     <strong>核心维护人员</strong>
-                    负责抖音整个<em>达人中心</em>的维护及研发，<em>POI</em>千万级项目，并维护团队<em>代码质量</em>，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
+                    负责抖音集星整个<em>达人中心</em>的维护及研发，通过<em
+                      >工具链 Rust 化</em
+                    >，<em>2. 物料平台化</em
+                    >，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
                     进行页面<em>性能优化</em>。包括但不限于<em>JSB</em>交互、<em>跨端</em>领域的探索。
+                    生活服务双端图标合集的制定和规范，推动相关团队 3
+                    个业务方的物料使用规范，提升了业务方的物料使用效率。
                   </p>
                 </div>
               </div>
@@ -155,7 +153,7 @@
           <section id="personal">
             <header class="section-hd">
               <span class="section-title-l"></span>
-              <h2 class="section-title">个人作品</h2>
+              <h2 class="section-title">个人评价</h2>
               <span class="section-title-r"></span>
             </header>
             <div class="section-bd">
@@ -191,7 +189,7 @@
             <div class="section-bd">
               <div class="item item-main">
                 <header class="item-hd">
-                  <span class="item-time">2022.09 ~ 至今</span>
+                  <span class="item-time">2022.06 ~ 至今</span>
                   <a
                     class="btn item-more"
                     href=""
@@ -204,19 +202,22 @@
               </div>
               <div class="item-bd">
                 <p class="section-content">
-                  <strong>需求迭代</strong><strong>网站维护</strong
-                  ><strong>技术规划</strong><strong>事故处理</strong><br /><i
+                  <strong>工程提效</strong><strong>体验优化</strong
+                  ><strong>质量建设</strong><strong>需求迭代</strong><br /><i
                     class="iconfont icon-dot"></i>
-                  除需求迭代外并且负责产品升级改造，功能接入，页面性能优化。<br /><i
-                    class="iconfont icon-dot"></i>
-                  承担重点、难点的技术攻坚，提升团队研发效率及质量
+                  建设SchemaTable AI agent 探索<br />
+                  <i class="iconfont icon-dot"></i>
+                  注重用户操作体验 发起团队合作 众测机制<br />
+                  <i class="iconfont icon-dot"></i>
+                  质量建设 <br /><i class="iconfont icon-dot"></i>
+                  抖音集星 0 - 1 移动端建设
                 </p>
               </div>
             </div>
             <div class="section-bd">
               <div class="item item-main">
                 <header class="item-hd">
-                  <span class="item-time">2021.07 ~ 2022.07</span>
+                  <span class="item-time">2021.06 ~ 2022.06</span>
                   <a
                     class="btn item-more"
                     href=""
@@ -287,7 +288,8 @@
                             </p></li> -->
                 <li>
                   <p class="section-content">
-                    <i class="iconfont icon-dot"></i> 使用<strong>Github</strong
+                    <i class="iconfont icon-dot"></i>
+                    使用<strong>Github</strong
                     ><strong>Jenkins</strong
                     >进行版本控制和代码托管，熟悉项目常规开发流程，使用<strong>Docker</strong>在服务器进行应用部署。
                   </p>
@@ -295,16 +297,11 @@
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
-                    时刻保持<strong>好奇心</strong>，具有一定的<strong>创新创造</strong>精神，持续关注业内前沿技术。工作上<strong
-                      >积极执行</strong
-                    ><strong>有责任心</strong
-                    >，具有良好的<strong>沟通合作</strong>能力、<strong>分析解决问题</strong>能力以及较强的<strong>学习能力</strong>。
                   </p>
                 </li>
               </ul>
             </div>
           </section>
-
           <!-- </div> -->
         </div>
       </div>
