--- a/src/index.html
+++ b/src/index.html
@@ -41,16 +41,16 @@
           <ul>
             <li>
               <a href="https://yuzijun.cn" target="_blank"
-                ><span class="contact-link">https://www.yuzijun.cn</span
+                ><span class="contact-link">https://yuzijun.cn</span
                 ><i class="iconfont icon-homepage"></i
               ></a>
             </li>
-            <li>
+            <!-- <li>
               <a href="https://github.com/yzjacc" target="_blank"
                 ><span class="contact-link">github.com/yzjacc</span
                 ><i class="iconfont icon-github"></i
               ></a>
-            </li>
+            </li> -->
             <li>
               <a href="mailto:yzjacc@gmail.com" target="_blank"
                 ><span class="contact-link">yzjacc@gmail.com</span
@@ -94,21 +94,6 @@
                   <span class="item-time">2022.06 ~ 至今</span>
                 </header>
               </div>
-
-              <div class="item">
-                <header class="item-hd">
-                  <h3 class="item-name">
-                    <i class="iconfont icon-dot"></i>抖音集星稳定性建设优化
-                  </h3>
-                </header>
-                <div class="item-bd">
-                  <p class="section-content">
-                    <strong>核心维护人员</strong>
-                    负责抖音整个<em>达人中心</em>的维护及研发，<em>POI</em>千万级项目，并维护团队<em>代码质量</em>，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
-                    进行页面<em>性能优化</em>。包括但不限于<em>JSB</em>交互、<em>跨端</em>领域的探索。
-                  </p>
-                </div>
-              </div>
               <div class="item">
                 <header class="item-hd">
                   <h3 class="item-name">
@@ -117,18 +102,39 @@
                 </header>
                 <div class="item-bd">
                   <p class="section-content">
-                    <strong>核心维护人员</strong>
-                    负责抖音整个<em>达人中心</em>的维护及研发，<em>POI</em>千万级项目，并维护团队<em>代码质量</em>，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
-                    进行页面<em>性能优化</em>。利用<em>LLM</em>模型、<em>MCP</em>实现了<em>D2C</em>UI稿对代码的转换，代码采纳率<em>
-                      76%+ </em
-                    >， 研发提效<em> 三倍 </em>。 进行 Schema Table
-                    全量统一，提升开发效率。截止目前接入5个业务平台全量推广。在不同的接近<em
-                      >60 +</em
-                    >
-                    个业务场景使用。
+                    负责<strong>SchemaTable</strong>
+                    的整体开发设计，实现了整体线上配置化，1h
+                    完成Table基础开发，提升开发效率。并在<strong>5</strong>个业务线全量推广统一，在不同的接近
+                    <strong>120 +</strong>
+                    个业务场景使用。采用了统一规范，产品层面交互进行了对齐，提升了<strong>产品体验度</strong>。
+                    并且利用<strong>LLM</strong>模型、<strong>MCP</strong>实现了<strong>D2C</strong>UI稿对代码的转换，代码采纳率<strong>
+                      76%+ </strong
+                    >，降低了 <strong> 开发成本</strong>， 整体研发提效<strong>
+                      三倍 </strong
+                    >。
                   </p>
                 </div>
               </div>
+              <div class="item">
+                <header class="item-hd">
+                  <h3 class="item-name">
+                    <i class="iconfont icon-dot"></i>抖音集星 稳定性建设
+                  </h3>
+                </header>
+                <div class="item-bd">
+                  <p class="section-content">
+                    负责抖音整个<strong>集星平台</strong>、<strong>达人中心</strong>的稳定性工作，建设在团队业务中的基础的保障能力。为了确保线上问题快速止损，进行了事前的
+                    <strong>监控前置</strong>，
+                    <strong>编码规范</strong>
+                    ，推动重要需求上线前的 <strong>众测</strong>机制，在事中针对
+                    <strong>微前端</strong>
+                    场景下性能指标的建设，以及灰度场景下的
+                    <strong> 防劣化体系</strong>
+                    进行了质量保证。以及事后进行业务投放产品营销渠道区分与治理工作。团队内沉淀通用指标看板和报警规则组，减少新项目搭建报警规则成本。
+                  </p>
+                </div>
+              </div>
+
               <div class="item">
                 <header class="item-hd">
                   <h3 class="item-name">
@@ -138,13 +144,15 @@
                 <div class="item-bd">
                   <p class="section-content">
                     <strong>核心维护人员</strong>
-                    负责抖音集星整个<em>达人中心</em>的维护及研发，通过<em
-                      >工具链 Rust 化</em
-                    >，<em>2. 物料平台化</em
-                    >，基于跨端<em>Lynx</em>进行需求迭代及技术探索，
-                    进行页面<em>性能优化</em>。包括但不限于<em>JSB</em>交互、<em>跨端</em>领域的探索。
-                    生活服务双端图标合集的制定和规范，推动相关团队 3
-                    个业务方的物料使用规范，提升了业务方的物料使用效率。
+                    注重于研发性能及用户体验性能。研发层面上进行了工具链
+                    <strong>Rust 化</strong>，build时间从 4min -> 50s 提升
+                    <strong>5倍</strong>。业务上不单关注
+                    <strong>FMP</strong>指标也针对最新指标
+                    <strong>INP</strong>
+                    进行优化。推动整体业务线物料平台化，沉淀了 SOP
+                    文档。包体积优化 <strong>40pp+</strong>，FMP 指标降低
+                    25pp+，卡顿率降低<strong>83pp</strong> ，次日留存率提高
+                    1.3pp+。优化前后用户<strong>满意度</strong>提升70pp。
                   </p>
                 </div>
               </div>
@@ -172,7 +180,9 @@
                 <div class="item-bd">
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
-                    在团队内部积极内推优秀同学，积极参加团队技术分享，进行技术交流。为团队增添新鲜血液，在身边朋友和多个招聘平台收集简历<strong>300+</strong>，进行分享文章<strong>10+</strong>篇，文章获得过公司<strong>ByteTech</strong>精选推荐。
+                    在团队内部积极内推优秀同学，积极参加团队技术分享，进行技术交流。为团队增添新鲜血液，在身边朋友和多个招聘平台收集简历<strong>300+</strong>，进行分享文章<strong>10+</strong>篇，文章获得过公司<strong>ByteTech</strong>精选推荐，个人荣获过<strong
+                      >Spot Bonus</strong
+                    >奖项。
                   </p>
                 </div>
               </div>
@@ -203,14 +213,17 @@
               <div class="item-bd">
                 <p class="section-content">
                   <strong>工程提效</strong><strong>体验优化</strong
-                  ><strong>质量建设</strong><strong>需求迭代</strong><br /><i
-                    class="iconfont icon-dot"></i>
-                  建设SchemaTable AI agent 探索<br />
+                  ><strong>质量建设</strong><strong>需求迭代</strong><br />
+
                   <i class="iconfont icon-dot"></i>
-                  注重用户操作体验 发起团队合作 众测机制<br />
+                  需求迭代外并且负责产品升级改造，功能接入。<br />
                   <i class="iconfont icon-dot"></i>
-                  质量建设 <br /><i class="iconfont icon-dot"></i>
-                  抖音集星 0 - 1 移动端建设
+                  重视用户体验，页面性能和体验相关优化。
+                  <br />
+                  <i class="iconfont icon-dot"></i>
+                  主导项目 0 - 1 搭建，以及相关基建的维护和质量保证。
+                  <br /><i class="iconfont icon-dot"></i>
+                  承担如 INP、AI 重点、难点的技术攻坚，提升团队研发效率及质量。
                 </p>
               </div>
             </div>
@@ -233,9 +246,9 @@
                   <strong>需求迭代</strong><strong>网站维护</strong
                   ><strong>技术规划</strong><strong>事故处理</strong><br /><i
                     class="iconfont icon-dot"></i>
-                  除需求迭代外并且负责产品升级改造，功能接入，页面性能优化。<br /><i
+                  配合完成项目前端开发整体规划，参与需求迭代及产品升级改造。<br /><i
                     class="iconfont icon-dot"></i>
-                  承担重点、难点的技术攻坚，提升团队研发效率及质量
+                  积极与前端组成员进行合作与交流，完善研究前端技术累积与储备。
                 </p>
               </div>
             </div>
@@ -260,27 +273,25 @@
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
-                    使用<strong>ES6</strong>语法编程，追求代码<strong>高质量</strong>和<strong>可维护性</strong>。以<strong
+                    使用<strong>ES6+</strong>语法编程，追求代码<strong>高质量</strong>和<strong>可维护性</strong>。以<strong
                       >React</strong
                     ><strong>Vue</strong
-                    >等为常用技术栈，<strong>Webpack</strong>为工程化工具，同时也了解主流的<strong>TypeScript</strong>等技术，具有多端<strong>Flutter</strong>开发经验。
+                    >等为常用技术栈，<strong>Webpack</strong>为工程化工具，同时也了解主流的<strong>TypeScript</strong>等技术。
                   </p>
                 </li>
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
-                    对主流<em>MVVM框架</em>也有一定的使用和了解，使用<strong>Vue.js</strong>搭配<strong
-                      >Vuex</strong
-                    ><strong>Vue-Router</strong>
-                    进行开发，同时也有<strong>React</strong>搭配<strong
-                      >Redux</strong
-                    ><strong>Umijs</strong>的经验。
+                    对主流<strong>MVVM框架</strong>也有一定的使用和了解，使用<strong
+                      >React</strong
+                    >
+                    进行开发，同时也有<strong>Vue.js</strong>、<strong>Vite</strong>的经验。
                   </p>
                 </li>
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
-                    对<strong>Node.js(Koa)</strong>、<strong>Web前端安全</strong>、<strong>模块化规范</strong>、<strong>包管理器</strong>、<strong>CSS预处理器(Sass，Lass)</strong>、<strong>数据可视化</strong>等也有一定的应用与思考。
+                    保持对前沿技术的持续探索，对<strong>AI</strong>大语言模型<strong>LLM</strong>有一定的了解，同时也有<strong>MCP</strong>等也有一定的应用与思考。
                   </p>
                 </li>
                 <!-- <li><p class="section-content"><i class="iconfont icon-dot"></i>
@@ -289,14 +300,20 @@
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
-                    使用<strong>Github</strong
-                    ><strong>Jenkins</strong
-                    >进行版本控制和代码托管，熟悉项目常规开发流程，使用<strong>Docker</strong>在服务器进行应用部署。
+                    掌握<strong>Jest</strong>等前端流行测试框架，针对公共模块能够编写高覆盖率的测试用例，使用<strong>ESLint</strong>进行代码规范检查，并在CI/CD中集成确保代码质量，提升代码健壮性。
                   </p>
                 </li>
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
+                    对目前<strong>微前端</strong>项目有一定的了解，
+                    掌握前端常见性能优化手段，有<strong>INP</strong>、<strong>FMP</strong>相关的性能优化经验，提升用户交互体验。同时对<strong>Rust</strong>工具链提效也有过应用。
+                  </p>
+                </li>
+                <li>
+                  <p class="section-content">
+                    <i class="iconfont icon-dot"></i>
+                    对<strong>Node.js</strong>、<strong>Web前端安全</strong>、<strong>模块化规范</strong>、<strong>包管理器</strong>、<strong>Monorepo</strong>、<strong>数据可视化</strong>等也有一定的应用与思考。
                   </p>
                 </li>
               </ul>
