--- a/src/index.html
+++ b/src/index.html
@@ -152,9 +152,11 @@
                     <strong>5倍</strong>。业务上不单关注
                     <strong>FMP</strong>指标也针对最新指标
                     <strong>INP</strong>
-                    进行优化。推动整体业务线物料平台化，沉淀了 SOP
-                    文档。包体积优化 <strong>40pp+</strong>，FMP 指标降低
-                    25pp+，INP降低<strong>83pp+</strong> ，次日留存率提高
+                    进行优化。推动整体业务线<strong>物料平台化</strong>。包体积优化
+                    <strong>40pp+</strong>，FMP 指标降低 25pp+，INP降低<strong
+                      >83pp+</strong
+                    >
+                    ，次日留存率提高
                     1.3pp+。优化前后用户<strong>满意度</strong>提升60pp+。
                   </p>
                 </div>
