--- a/src/index.html
+++ b/src/index.html
@@ -108,12 +108,11 @@
               <div class="item-bd">
                 <p class="section-content">
                   负责抖音整个<strong>集星平台</strong>、<strong>达人中心</strong>的稳定性工作，建设在团队业务中的基础的保障能力。进行了事前的
-                  <strong>监控前置</strong>，
-                  <strong>编码规范</strong>
-                  ，推动需求上线前的 <strong>众测</strong>机制，在事中针对
+                  推动需求上线前的 <strong>众测</strong>机制， <strong>编码规范</strong>
+                  ，在事中针对
                   <strong>微前端</strong>
                   场景下性能指标的建设，以及灰度场景下的
-                  <strong> 防劣化体系</strong>
+                  <strong>防劣化体系</strong>
                   进行了质量保证。以及事后进行业务投放产品营销渠道区分与治理工作。团队内沉淀通用指标看板和报警规则组。
                 </p>
               </div>
