--- a/src/index.html
+++ b/src/index.html
@@ -342,9 +342,7 @@
         ><i class="iconfont icon-link"></i> yuzijun.cn</a
       >
     </footer>
-    <a
-      class="pdf"
-      href="https://pg12138.oss-cn-beijing.aliyuncs.com/简历 _ 于子俊 - Zijun Yu.pdf"
+    <a class="pdf" href="https://yuzijun.cn/resume.pdf"
       ><i class="iconfont icon-pdf"></i> PDF简历</a
     >
   </body>
