--- a/src/index.html
+++ b/src/index.html
@@ -153,9 +153,8 @@
                     <strong>FMP</strong>指标也针对最新指标
                     <strong>INP</strong>
                     进行优化。推动整体业务线<strong>物料平台化</strong>。包体积优化
-                    <strong>40pp+</strong>，FMP 指标降低 25pp+，INP降低<strong
-                      >83pp</strong
-                    >
+                    <strong>40pp+</strong>，FMP
+                    指标降低<strong>25pp+</strong>，INP降低<strong>83pp</strong>
                     ，留存率提高
                     <strong>2.3pp+</strong
                     >。优化前后用户<strong>满意度</strong>提升60pp+。
