--- a/src/index.html
+++ b/src/index.html
@@ -163,36 +163,32 @@
               </div>
             </div>
           </section>
-          <section id="personal">
-            <header class="section-hd">
-              <span class="section-title-l"></span>
-              <h2 class="section-title">个人评价</h2>
-              <span class="section-title-r"></span>
-            </header>
-            <div class="section-bd">
-              <div class="item">
-                <div class="item-bd">
-                  <p class="section-content">
-                    <i class="iconfont icon-dot"></i>
-                    积极参加团队技术分享，进行技术交流，进行分享文章<strong>10+</strong>篇，文章获得过公司<strong>ByteTech</strong>精选推荐。在团队内部积极内推优秀同学，为团队增添新鲜血液，在身边朋友和多个招聘平台收集简历<strong>300+</strong>。个人荣获过<strong
-                      >Spot Bonus</strong
-                    >奖项。
-                  </p>
-                </div>
-              </div>
-              <div class="item">
-                <div class="item-bd">
-                  <p class="section-content">
-                    <i class="iconfont icon-dot"></i>
-                    时刻保持<strong>好奇心</strong>，具有一定的<strong>创新创造</strong>精神，持续关注业内前沿技术。工作上<strong
-                      >积极执行</strong
-                    ><strong>有责任心</strong
-                    >，具有良好的<strong>沟通合作</strong>能力、<strong>分析解决问题</strong>能力以及较强的<strong>学习能力</strong>。
-                  </p>
-                </div>
+          <!-- <section id="personal">
+          <header class="section-hd">
+            <span class="section-title-l"></span>
+            <h2 class="section-title">个人评价</h2>
+            <span class="section-title-r"></span>
+          </header>
+          <div class="section-bd">
+            <div class="item">
+              <div class="item-bd">
+                <p class="section-content">
+                  <i class="iconfont icon-dot"></i>
+                  积极参加团队技术分享，进行技术交流，进行分享文章<strong>10+</strong>篇，文章获得过公司<strong>ByteTech</strong>精选推荐。在团队内部积极内推优秀同学，为团队增添新鲜血液，在身边朋友和多个招聘平台收集简历<strong>300+</strong>。个人荣获过<strong>Spot
+                    Bonus</strong>奖项。
+                </p>
               </div>
             </div>
-          </section>
+            <div class="item">
+              <div class="item-bd">
+                <p class="section-content">
+                  <i class="iconfont icon-dot"></i>
+                  时刻保持<strong>好奇心</strong>，具有一定的<strong>创新创造</strong>精神，持续关注业内前沿技术。工作上<strong>积极执行</strong><strong>有责任心</strong>，具有良好的<strong>沟通合作</strong>能力、<strong>分析解决问题</strong>能力以及较强的<strong>学习能力</strong>。
+                </p>
+              </div>
+            </div>
+          </div>
+        </section> -->
         </div>
         <div class="content-right">
           <section id="practice">
@@ -221,15 +217,12 @@
                   ><strong>质量建设</strong><strong>需求迭代</strong><br />
 
                   <i class="iconfont icon-dot"></i>
-                  负责微前端基座体验一致性设计开发，功能接入。
-                  <br />
-                  <i class="iconfont icon-dot"></i>
+                  负责微前端基座体验一致性设计开发，功能接入；
                   除需求迭代外重视用户体验，页面性能和体验相关优化。<br />
 
                   <i class="iconfont icon-dot"></i>
-                  主导项目 0 - 1 搭建，以及相关基建的维护和质量保证。
-                  <br /><i class="iconfont icon-dot"></i>
-                  承担如 INP、AI 重点、难点的技术攻坚，提升团队研发效率及质量。
+                  主导项目 0 - 1 搭建，以及相关基建的维护和质量保证； 承担如
+                  INP、AI 重点、难点的技术攻坚，提升团队研发效率及质量。
                 </p>
               </div>
             </div>
@@ -252,8 +245,7 @@
                   <strong>需求迭代</strong><strong>网站维护</strong
                   ><strong>技术规划</strong><strong>事故处理</strong><br /><i
                     class="iconfont icon-dot"></i>
-                  配合完成项目前端开发整体规划，参与需求迭代及产品升级改造。<br /><i
-                    class="iconfont icon-dot"></i>
+                  配合完成项目前端开发整体规划，参与需求迭代及产品升级改造；
                   积极与前端组成员进行合作与交流，完善研究前端技术累积与储备。
                 </p>
               </div>
@@ -270,7 +262,7 @@
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
-                    掌握Web前端开发基本技能，熟悉<strong>W3C标准</strong>、<strong>HTML</strong>、<strong>CSS</strong>、<strong>计算机网络</strong>、<strong>页面布局</strong>、<strong>响应式布局</strong>等，领悟<strong>视觉</strong>与<strong>设计</strong>，重视<strong>页面交互</strong>与<strong>用户体验</strong>。
+                    掌握Web前端开发基本技能，熟悉<strong>W3C标准</strong>、<strong>HTML</strong>、<strong>CSS</strong>、<strong>计算机网络</strong>、<strong>页面布局</strong>、<strong>响应式布局</strong>等，重视<strong>页面交互</strong>与<strong>用户体验</strong>。
                   </p>
                 </li>
                 <!-- <li><p class="section-content"><i class="iconfont icon-dot"></i>
@@ -290,16 +282,13 @@
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
                     对<strong>微前端</strong>项目有一定的了解，
-                    掌握常见性能优化手段，有<strong>INP</strong>、<strong>FMP</strong>相关的性能优化经验，提升用户交互体验。同时对<strong>Rust</strong>工具链提效也有过应用。
+                    掌握常见性能优化手段，有<strong>INP</strong>、<strong>FMP</strong>相关的性能优化经验。同时对<strong>Rust</strong>工具链提效也有过应用。
                   </p>
                 </li>
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
-                    使用<strong>ES6+</strong>语法编程，追求代码<strong>高质量</strong>和<strong>可维护性</strong>。以<strong
-                      >React</strong
-                    ><strong>Vue</strong
-                    >等为常用技术栈，<strong>Webpack</strong>为工程化工具，同时也了解主流的<strong>TypeScript</strong>等技术。
+                    使用<strong>ES6+</strong>语法编程，追求代码<strong>高质量</strong>和<strong>可维护性</strong>。<strong>Webpack</strong>为工程化工具，同时也了解主流的<strong>TypeScript</strong>等技术。
                   </p>
                 </li>
                 <li>
@@ -315,13 +304,21 @@
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
-                    掌握<strong>Jest</strong>等前端流行测试框架，针对公共模块能够编写高覆盖率的测试用例，使用<strong>ESLint</strong>进行代码规范检查，并在CI/CD中集成确保代码质量，提升代码健壮性。
+                    掌握<strong>Jest</strong>等前端流行测试框架，使用<strong>ESLint</strong>进行代码规范检查，并在CI/CD中集成确保代码质量，提升代码健壮性。
                   </p>
                 </li>
                 <li>
                   <p class="section-content">
                     <i class="iconfont icon-dot"></i>
                     对<strong>Node.js</strong>、<strong>Web前端安全</strong>、<strong>模块化规范</strong>、<strong>包管理器</strong>、<strong>Monorepo</strong>、<strong>前端监控</strong>等也有一定的应用与思考。
+                  </p>
+                </li>
+                <li>
+                  <p class="section-content">
+                    <i class="iconfont icon-dot"></i>
+                    积极参加团队技术分享，进行技术交流，进行分享文章<strong>10+</strong>篇，文章获得过公司<strong>ByteTech</strong>精选推荐。在团队内部积极内推优秀同学，为团队增添新鲜血液，在身边朋友和多个招聘平台收集简历<strong>300+</strong>。个人荣获过<strong
+                      >Spot Bonus</strong
+                    >奖项。
                   </p>
                 </li>
               </ul>
